# git-versioneer

./: .gitattributes  .gitlab-ci.yml  MANIFEST.in  README.rst  git-versioneer.py  setup.cfg  setup.py
src/git_versioneer/: __init__.py  _version.py  cli.py  const.py
tests/: clean.sh  conftest.py  dirty.sh  fresh.sh  test_cli.py  test_pep440.py  test_rpm.py  test_run.py
